2010-03-02  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report.pm: Set $self->{hostname}.
	* perl/Amanda/Report/human.pm: Use $report->{hostname}.

2010-03-03  Paul C. mantz <pcmantz@zmanda.com>
	* perl/Amanda/Report/human.pm: tape num. blocks print as 0 if undefined

2010-03-02  Paul C. Mantz <pcmantz@zmanda.com>
	* perl/Amanda/Report.pm; added three-arg form of get_program_info()
	* perl/Amanda/Report/human.pm: usage of three-arg form
	* installcheck/Amanda_Report.pl: tests

2010-03-02  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report/human.pm: Remove coma.

2010-03-02  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Correctly set autolabel from command line
				 '-olabel_new_tapes=' options.

2010-03-02  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amidxtaped.pl: Exit if receive ABORT message.
	* recover-src/extract_list.c: Send abort message on user request.
	* common-src/amfeatures.c: Add fe_amidxtaped_abort.
	* common-src/amfeatures.h: Add fe_amidxtaped_abort.
	* perl/Amanda/Feature.pod: Add fe_amidxtaped_abort.

2010-03-02  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: Wait up to 5 seconds for children termination.

2010-03-02  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amflush.c: Delay creation of log file.

2010-03-02  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Correctly set autolabel from label_new_tapes.

2010-03-02  Paul C. Mantz <pcmantz@zmanda.com>
	* server-src/amreport_new.pl perl/Amanda/Report/human.pm : fixed
	  tapelist loading

2010-03-02  Paul C. Mantz <pcmantz@zmanda.com>
	* perl/Amanda/Report.pm: added tape_labels field for preserving tape
	  order
	* perl/Amanda/Report/human.pm: use of tape_labels
	* installcheck/Amanda_report.pl: installcheck, cleanup

2010-03-01  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/reporter.c: Set and check repdata.

2010-03-01  Dustin J. Mitchell <dustin@zmanda.com>