@@ -1,4 +1,8 @@
 2010-03-02  Jean-Louis Martineau <martineau@zmanda.com>
+	* perl/Amanda/Report/human.pm: Remove leading 0 on day date.
+	* server-src/amreport_new.pl: Remove leading 0 on day date.
+
+2010-03-02  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Report.pm: Set $self->{hostname}.
 	* perl/Amanda/Report/human.pm: Use $report->{hostname}.
 
